--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,3 +10,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/DWPrototype_Git")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/DWPrototype_Git")
 
+
+
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/MainGameMode.MainGameMode_C
+EditorStartupMap=/Game/Maps/PrototypeMap.PrototypeMap
+GameDefaultMap=/Game/Maps/PrototypeMap.PrototypeMap
+
