Aki Walking Mode Completed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,8 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/DWPrototype_Git")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/DWPrototype_Git")
-
-
+bAllowMultiThreadedAnimationUpdate=True
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/MainGameMode.MainGameMode_C
